# llm-inflation

./: .flake8  .gitignore  99_Central_bank_with_LLM.ipynb  README.md  pyproject.toml  response.html  test.ipynb
data/: covariates.csv  statements_with_metrics.csv
llm_inflation/: data.py  llm.py  utils.py
llm_inflation/data/: fomc_statements.parquet
llm_inflation/model/: __init__.py  multivariate.py
